kubernetes/security/policies/vap/deny-root-hostmount-pods.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/yamllint.json
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deny-root-hostmount-pods
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    # Pod resources
    - apiGroups: [ "" ]
      apiVersions: [ "v1" ]
      operations: [ "CREATE", "UPDATE" ]
      resources: [ "pods" ]
  validations:
  - message: "Pods cannot mount the root of the host filesystem."
    reason: "Forbidden"
    expression: |-
      object.kind == 'Pod' ? (
        !has(object.spec.volumes) || object.spec.volumes.all(volume, !has(volume.hostPath) ? true : volume.hostPath.path != "/")
      ) : true
