kubernetes/security/policies/vap/deny-root-hostmount.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/yamllint.json
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deny-root-hostmount
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    # Pod resources
    - apiGroups: [ "" ]
      apiVersions: &v1 [ "v1" ]
      operations: &ops [ "CREATE", "UPDATE" ]
      resources: [ "pods" ]
    # Workload resources
    - &apps
      apiGroups: [ "apps" ]
      apiVersions: *v1
      operations: *ops
      resources: [ "deployments" ]
    - <<: *apps
      resources: [ "replicasets" ]
    - <<: *apps
      resources: [ "statefulsets" ]
    - <<: *apps
      resources: [ "daemonsets" ]
    # Batch resources
    - &batch
      apiGroups: [ "batch" ]
      apiVersions: *v1
      operations: *ops
      resources: [ "jobs" ]
    - <<: *batch
      resources: [ "cronjobs" ]
  validations:
  - message: "Pods and workloads cannot mount the root of the host filesystem."
    reason: "Forbidden"
    expression: |-
      object.kind == 'Pod' 
        ? !(object.spec.volumes.exists(v, v.hostPath && v.hostPath.path == '/')) 
        : !(object.spec.template.spec.volumes.exists(v, v.hostPath && v.hostPath.path == '/'))
