kubernetes/security/policies/vap/restrict-namespace-delete.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/yamllint.json
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-namespace-delete
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [ "" ]
      apiVersions: [ "v1" ]
      operations: [ "DELETE" ]
      resources: [ "namespaces" ]
  validations:
  - message: "Namespace deletion is restricted."
    reason: "Forbidden"
    expression: |-
      request.operation != "DELETE" ? true : false
